export const snapshot = {};

snapshot[`forge list 1`] = `
"
🚨 @scope/name1     0.0.0 👉 1.0.0
📦 @scope/name2     2.1.0-pre.1+<hash>
🚨 @scope/name3     2.0.0 👉 3.0.0
📦 @scope/name4     4.0.1-pre.1+<hash>
📦 @scope/dir/name5 0.0.0
📦 @scope/dir/name6
"
`;

snapshot[`forge list --modules [packages...] 1`] = `
"
🚨 @scope/name1     0.0.0 👉 1.0.0

  🧩 (default)      <directory>/name1/name2.ts
  🧩 main           <directory>/name1/main.ts

📦 @scope/name2     2.1.0-pre.1+<hash>

  🧩 (default)      <directory>/name2/name1

🚨 @scope/name3     2.0.0 👉 3.0.0


📦 @scope/name4     4.0.1-pre.1+<hash>


📦 @scope/dir/name5 0.0.0


📦 @scope/dir/name6


"
`;

snapshot[`forge list [pattern] 1`] = `
"
🚨 @scope/name1     0.0.0 👉 1.0.0
📦 @scope/name2     2.1.0-pre.1+<hash>
🚨 @scope/name3     2.0.0 👉 3.0.0
📦 @scope/name4     4.0.1-pre.1+<hash>
📦 @scope/dir/name5 0.0.0
📦 @scope/dir/name6
"
`;

snapshot[`forge list [directory] 1`] = `
"

"
`;

snapshot[`forge changelog 1`] = `
"
🏷️  name1@1.0.0

  fix(name1): bug

🏷️  name2@2.1.0-pre.1+<hash>

  feat(name2): feature
  refactor(name2): rewrite

🏷️  name3@3.0.0

  docs(name3): fix typo

🏷️  name4@4.0.1-pre.1+<hash>

  refactor(name4/unstable)!: rewrite unstable api

🏷️  name5@0.0.0

  style(name5): tabs over spaces

"
`;

snapshot[`forge changelog --all --emoji 1`] = `
"
🏷️  name1@1.0.0

  🐛 bug

🏷️  name2@2.1.0-pre.1+<hash>

  ✨ feature
  ♻️ rewrite

🏷️  name2@1.0.0

  ✨ name2

🏷️  name3@3.0.0

  📝 fix typo

🏷️  name4@4.0.1-pre.1+<hash>

  ♻️ rewrite unstable api 💥

🏷️  name5@0.0.0

  🎨 tabs over spaces

"
`;

snapshot[`forge changelog --type <type> 1`] = `
"
🏷️  name2@2.1.0-pre.1+<hash>

  feat(name2): feature

🏷️  name4@4.0.1-pre.1+<hash>

  refactor(name4/unstable)!: rewrite unstable api

"
`;

snapshot[`forge changelog --type <type> --no-breaking --all 1`] = `
"
🏷️  name2@2.1.0-pre.1+<hash>

  feat(name2): feature

🏷️  name2@1.0.0

  feat(name2): name2

"
`;

snapshot[`forge changelog --breaking --markdown 1`] = `
"
## name4@4.0.1-pre.1+<hash>

- refactor(name4/unstable)!: rewrite unstable api

"
`;

snapshot[`forge compile --target <target> --bundle --install 1`] = `
"
📦 Compiled name1

  🏺 <directory>/dist/name1/1.0.0/aarch64-unknown-linux-gnu.tar.gz
  💾 Installed name1

"
`;

snapshot[`forge bump --release --pr --changelog=<file> --emoji 1`] = `
"
🚀 Created bump pull request

  [<url>/pulls/1]

"
`;

snapshot[`forge release --draft --emoji 1`] = `
"
🚀 Created release name1@1.0.0

  [<url>/releases/name1@1.0.0]

  🏺 aarch64-unknown-linux-gnu.tar.gz
  🏺 sha256.txt

🚀 Created release name3@3.0.0

  [<url>/releases/name1@1.0.0]

"
`;
